--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -1,3 +1,9 @@
 all:
-	cc main.c -o out
+	cc main.c fen.c data.c -o out
 	./out
+fen:
+	cc main.c fen.c data.c -o out
+	./out -f "${FEN}"
+test:
+	cc test.c -o out_test
+	./out_test
