--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -4,6 +4,8 @@ all:
 fen:
 	cc main.c fen.c data.c -o out
 	./out -f "${FEN}"
+only:
+	cc main.c fen.c data.c -o out
 test:
 	cc test.c -o out_test
 	./out_test
