--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -1,11 +1,11 @@
 all:
-	cc main.c fen.c data.c -o out
+	cc main.c fen.c data.c init.c -o out
 	./out
 fen:
-	cc main.c fen.c data.c -o out
+	cc main.c fen.c data.c init.c -o out
 	./out -f "${FEN}"
 only:
-	cc main.c fen.c data.c -o out
+	cc main.c fen.c data.c init.c -o out
 test:
 	cc test.c -o out_test
 	./out_test
