enPas OFFBOARD and init stuff

--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -4,8 +4,11 @@ all:
 fen:
 	cc main.c fen.c data.c init.c -o out
 	./out -f "${FEN}"
+node:
+	cc main.c fen.c data.c init.c -o out
+	./out -n
 only:
 	cc main.c fen.c data.c init.c -o out
 test:
-	cc test.c -o out_test
+	cc test.c data.c -o out_test
 	./out_test
