--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -1,14 +1,14 @@
 all:
-	cc main.c fen.c data.c init.c -o out
+	cc main.c fen.c data.c init.c moves.c -o out
 	./out
 fen:
-	cc main.c fen.c data.c init.c -o out
+	cc main.c fen.c data.c init.c moves.c -o out
 	./out -f "${FEN}"
 node:
-	cc main.c fen.c data.c init.c -o out
+	cc main.c fen.c data.c init.c moves.c -o out
 	./out -n
 only:
-	cc main.c fen.c data.c init.c -o out
+	cc main.c fen.c data.c init.c moves.c -o out
 test:
 	cc test.c data.c -o out_test
 	./out_test
