--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -1,17 +1,17 @@
 all:
-	cc main.c fen.c data.c init.c moves.c eval.c -o out
+	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
 	./out
 fen:
-	cc main.c fen.c data.c init.c moves.c eval.c -o out
+	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
 	./out -f "${FEN}"
-rand:
-	cc main.c fen.c data.c init.c moves.c eval.c -o out
-	./out -r
+perf:
+	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
+	./out -p
 search:
-	cc main.c fen.c data.c init.c moves.c eval.c -o out
+	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
 	./out -s
 only:
-	cc main.c fen.c data.c init.c moves.c eval.c -o out
+	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
 test:
-	cc test.c data.c -o out_test
+	cc sand.c data.c -o out_test
 	./out_test
