--- a/move_generator/makefile
+++ b/move_generator/makefile
@@ -4,7 +4,7 @@ all:
 fen:
 	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
 	./out -f "${FEN}"
-perf:
+perft:
 	cc main.c fen.c data.c init.c moves.c eval.c test.c -o out
 	./out -p
 search:
